force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <label>タスク</label>
    <nameField>
        <label>タスク名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>