force-app/main/default/objects/Task__c/fields/ActualEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActualEndDate__c</fullName>
    <label>実績終了期日</label>
    <type>Date</type>
</CustomField>