force-app/main/default/objects/Task__c/fields/ActualStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActualStartDate__c</fullName>
    <label>実績開始期日</label>
    <type>Date</type>
</CustomField>