force-app/main/default/objects/Task__c/fields/Anken__c.field-meta.xml
<CustomField>
    <fullName>Anken__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Anken__c</referenceTo>
    <relationshipLabel>タスク</relationshipLabel>
    <relationshipName>Anken_rel</relationshipName>
    <type>Lookup</type>
</CustomField>