force-app/main/default/objects/Task__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Maneger_rel</relationshipName>
    <type>Lookup</type>
</CustomField>