force-app/main/default/objects/Task__c/fields/ParentTask__c.field-meta.xml
<CustomField>
    <fullName>ParentTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親タスク</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>タスク</relationshipLabel>
    <relationshipName>ParentTask_rel</relationshipName>
    <type>Lookup</type>
</CustomField>