force-app/main/default/objects/Task__c/fields/PlanEndDate__c.field-meta.xml
<CustomField>
    <fullName>PlanEndDate__c</fullName>
    <label>予定終了期日</label>
    <type>Date</type>
</CustomField>