force-app/main/default/objects/Task__c/fields/PlanStartDate__c.field-meta.xml
<CustomField>
    <fullName>PlanStartDate__c</fullName>
    <label>予定開始期日</label>
    <type>Date</type>
</CustomField>