force-app/main/default/objects/Task__c/fields/TaskDescription__c.field-meta.xml
<CustomField>
    <fullName>TaskDescription__c</fullName>
    <label>タスク概要</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>