force-app/main/default/objects/Task__c/validationRules/SetMaxProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>SetMaxProgress</fullName>
    <active>true</active>
    <errorConditionFormula>Progress__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>Progress__c</errorDisplayField>
    <errorMessage>0～100で入力してください。</errorMessage>
</ValidationRule>