force-app/main/default/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Anken__c</columns>
    <columns>PlanStartDate__c</columns>
    <columns>PlanEndDate__c</columns>
    <columns>Progress__c</columns>
    <columns>Status__c</columns>
    <columns>ParentTask__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>