force-app/main/default/objects/Task__c/listViews/testqueue_Task.listView-meta.xml
<ListView>
    <fullName>testqueue_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>テストキュー</label>
    <queue>testqueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>